# Diu

./: LICENSE  README.md
docs/: faqs.md  flutter-setup.md  hardware-setup.md  hardware_details.md  rust-setup.md
hardware/: Cargo.toml  sdkconfig.defaults
hardware/src/: bluetooth.rs  led_manager.rs  main.rs  time_manager.rs
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app_bar.dart  ball_button.dart  ble.dart  control_pg.dart  main.dart  start_pg.dart  time_form.dart
mobile/lib/themes/: custom_theme.dart
mobile/test/: widget_test.dart
security/: hardware_security_doc.md  mobile_security_doc.md
