[package]
name = "hardware"
version = "0.1.0"
authors = ["Berlin Experiment <info@berlin-experiment.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.69"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp32-nimble = "0.0.7"

time = { version = "0.3", features = ["macros", "parsing"] }

[build-dependencies]
embuild = "0.31.0"
